--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,7 @@ padding: 0px 35px 30px;
     min-height: 300px;
     background-repeat: no-repeat;
     padding: 45px 0px 45px;
+    font-family: 'Montserrat', sans-serif;
 }
 .company_inner{
     max-width: 545px;
@@ -376,8 +377,7 @@ color: #fff;
 }
 .form_box_inner label,
 .form_box_inner input,
-.form_box_inner textarea,
-.form_box_inner select{
+.form_box_inner textarea{
     display: block;
     width: 100%;
 
@@ -409,4 +409,14 @@ color: #fff;
     outline: none;
     height: 30px;
     border: 1px solid #323232;
+}
+.form_box_inner .jqselect{
+    display: block;
+    width: 100%;
+}
+.form_box_inner .jq-selectbox__select{
+    height: 30px;
+    border: 1px solid #323232;
+    background-color: transparent;
+    border-radius: 0;
 }
