--- a/css/jquery.formstyler.theme.css
+++ b/css/jquery.formstyler.theme.css
@@ -207,8 +207,8 @@
 	background: linear-gradient(#F6F6F6, #E6E6E6);
 }
 .jq-selectbox__select:active {
-	background: #F5F5F5;
-	box-shadow: inset 1px 1px 3px #DDD;
+	background: #ffffff;
+	box-shadow: inset 1px 1px 3px rgb(255, 255, 255);
 }
 .jq-selectbox.focused .jq-selectbox__select {
 	border: 1px solid #5794BF;
@@ -224,7 +224,9 @@
 	width: 100%;
 }
 .jq-selectbox .placeholder {
-	color: #888;
+	color: rgb(0, 0, 0);
+	font-family: 'Montserrat', sans-serif;
+	text-align: center;
 }
 .jq-selectbox__trigger {
 	position: absolute;
@@ -232,7 +234,7 @@
 	right: 0;
 	width: 34px;
 	height: 100%;
-	border-left: 1px solid #CCC;
+	background-color: #ffc222;
 }
 .jq-selectbox__trigger-arrow {
 	position: absolute;
