--- a/css/media.css
+++ b/css/media.css
@@ -66,8 +66,9 @@ text-align: center;
     display: block;
     
 }
+.dropbtn,
 .menu a{
-    display: block;
+    display: block !important;
     background-color: #ffc222;
     margin-right: 0 !important;
     border: 0.5px solid #fff !important;
