--- a/css/media.css
+++ b/css/media.css
@@ -55,30 +55,23 @@ text-align: center;
 }
 
 .menu ul{
-    display: none;
+    display: grid;
     position: absolute;
     left: 0;
     right: 0;
     margin-top: 20px;
     z-index: 50;
 }
-.menu li{
-    display: block;
-    
-}
-.dropbtn,
+
+
 .menu a{
-    display: block !important;
+
     background-color: #ffc222;
     margin-right: 0 !important;
     border: 0.5px solid #fff !important;
     text-align: center;
 }
-.menu ul li{
- display: block !important ; 
-font-family: 'Montserrat', sans-serif; 
-    
-    }
+
 .form_box_inner{
         display: block !important;
  }
@@ -105,6 +98,16 @@ font-family: 'Montserrat', sans-serif;
     max-width: 100% !important;
     margin-bottom: 90px;
 }
+.sub-nav {
+    position: absolute;
+    border-top: 15px solid transparent;
+    left: -9999px;
+    list-style:none;
+    padding:0;
+    z-index: 90;
+    width:150px ;
+    display: none !important;
+}
 
 
 }
@@ -123,11 +126,4 @@ font-family: 'Montserrat', sans-serif;
         margin-left: 30px;
     }
 }
-@media (min-width: 850px){
-    .menu ul li{
-        display: inline-block !important ; 
-        font-family: 'Montserrat', sans-serif; 
-    
-    }
 
-}
