--- a/css/media.css
+++ b/css/media.css
@@ -28,10 +28,30 @@
     margin-left: 10px;
     float: left;
 }
-
+.two-column{
+    display: block !important;
+     margin-left: auto;
+      margin-right: auto;
+    }
     
-}
 
+    .two-column img{
+        width: 345px !important;
+        height: auto;
+
+    }   
+}
+@media (min-width: 1100px){
+    #menu-container{
+        display: none;
+    }
+    .company_ab .container{
+        display: flex;
+        justify-content: space-between;
+        } 
+
+
+}
 @media (max-width: 850px){
 .header_btn{
 float: none !important;
@@ -62,10 +82,7 @@ text-align: center;
     text-transform: uppercase;
     border-top: 1px solid #dbdcd2;
 }
-
-
-
-
+ 
 
 .form_box_inner{
         display: block !important;
@@ -106,11 +123,11 @@ text-align: center;
 
 
 }
+
 @media (max-width: 450px){
    .slider .slick-btn{
         display: none;
     }
-
 
 }
 @media (max-width: 410px){
@@ -120,14 +137,8 @@ text-align: center;
     .header_phone{
         margin-left: 30px;
     }
-}
-@media (min-width: 1100px){
-    #menu-container{
-        display: none;
-    }
-    .company_ab .container{
-        display: flex;
-        justify-content: space-between;
-        }
+    
 }
 
+
+}
