--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,14 @@ color: #1b1b1b;
     background-position: bottom right;
     background-position-x: 650px;
 }
+.form_inner_2{
+    padding-bottom: 40px;
+    background-image: url(../img/home.png);
+    min-height: 460px;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-position-x: 750px;
+}
 .form_box{
     max-width: 850px;
     padding-top: 45px;
@@ -719,6 +727,100 @@ color: #1b1b1b;
     right: 20px;
     left: auto;
 }
+
+.product{
+    padding: 55px 0px 110px;
+    background-image: url(../img/bg_pattern.jpg);
+    font-family: 'Montserrat', sans-serif;
+}
+.product_inner{
+    display: flex;
+    justify-content: space-between;
+}
+.product_slider{
+    max-width: 700px;
+    width: 100%;
+    box-shadow: 0px 5px 15.36px 0.64px rgba(128, 127, 127, 0.13);
+    background-color: rgb(255, 255, 255);
+    padding: 50px 35px 45px 60px;
+    position: relative;
+    border-bottom-left-radius: 15px;
+}
+.product_slider::before{
+    font-family: 'icomoon' !important;
+    content: "\e902";
+    color: #fff;
+    font-size: 16px;
+    width: 65px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    background-color: #ffc222;
+    position: absolute;
+    top: 0;
+    left: 70px;
+}
+.product_blog{
+    max-width: 400px;
+    width: 100%;
+}
+.product_blog p{
+    font-size: 25px;
+}
+.product_images{
+    position: relative;
+}
+.product_date img{
+    position: absolute;
+    width: 55px;
+    height: 55px;
+    top: -10px;
+    left: 10px;
+    border-bottom-left-radius: 10px;
+}
+.product_title{
+    font-size: 16px;
+    font-weight: 500;
+    color: #242424;
+    letter-spacing: 0.5px;
+    padding: 12px 0px;
+}
+.product-text{
+    color: #242424;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+}
+.product_slider_title{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #1b1b1b;
+    letter-spacing: 0.5px;
+    margin-bottom: 15px;
+}
+.product_slider_text{
+    margin-bottom: 30px;
+    max-width: 400px;
+}
+.product_slider_author{
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #1b1b1b;
+    float: right;
+}
+.product_slider_inner .slick-btn{
+    top: auto;
+    bottom:-110px;
+}
+.product_slider_inner .slick-next{
+    right: -35px;
+    
+}
+.product_slider_inner .slick-prev{
+    right: 20px;
+    left: auto;
+}
 .footer_content{
     background-color: #242424;
     padding: 22px 0px 30px;
@@ -739,6 +841,10 @@ color: #1b1b1b;
     color: #fff;
     font-weight: 500;
     line-height: 36px;
+}
+.product_slider_item{
+    display: flex!important;
+    justify-content: space-between;
 }
 .footer_text{
     color: #d3d2d2;
@@ -1365,9 +1471,10 @@ color: #000000;
 }
  
 .benefits__element p {
-    color: #cdcdcd;
+    color: #eeeeee;
     text-align: center;
     line-height: 1.3;
+    font-size: 20px;
 }
  
 .benefits__number {
@@ -1377,6 +1484,8 @@ color: #000000;
 }
  
 .benefits__title {
+    color: #ffff!important;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.125rem;
 }
 .hide{
@@ -1519,6 +1628,8 @@ a { text-decoration: none; color: black;}
     display: flex;
     justify-content: space-between;
 }
+
+
 
 
 
